<resources>
    <string name="app_name">TimeBarter</string>
    <string name="text_nav_home">Home</string>
    <string name="text_nav_list_help">List Help</string>
    <string name="text_nav_add_post">Add Post</string>
    <string name="text_nav_leader_board">Leader Board</string>
    <string name="text_nav_profile">My Profile</string>
    <string name="text_hint_name">name</string>
    <string name="text_hint_email">email</string>
    <string name="text_hint_password">password</string>
    <string name="text_btn_sign_up">Sign Up</string>
    <string name="text_btn_sign_in">Sign In</string>
    <string name="text_title_alert_sign_up_success">SignUp Successfully</string>
    <string name="text_message_alert_sign_up_success">We will send you email verification.\n\nPlease, check your email and verify your account</string>
    <string name="text_btn_alert_confirm">Confirm</string>
    <string name="text_error_message_password">Password min 8 character</string>
    <string name="text_error_message_email">Email is not valid</string>
    <string name="text_error_message_name">Name min 4 character</string>
    <string name="text_content_sign_up">Already have an account ?</string>
    <string name="text_cb_remember_me">Remember me ?</string>
    <string name="text_content_sign_in">New for Time Barter ?</string>
    <string name="text_error_message_password_empty">Password should not be empty</string>
    <string name="text_error_message_verify_account">Please verify your account</string>
    <string name="text_message_sign_in_success">SignIn Successfully, Welcome</string>
    <string name="text_content_time_balance">Time Balance</string>
    <string name="text_content_time_spent">Time Spent</string>
    <string name="text_post_title">Title</string>
    <string name="text_post_desc">Description</string>
    <string name="title_post_category">Category</string>
    <string name="text_btn_course">Course</string>
    <string name="text_btn_hobby">Hobby</string>
    <string name="text_btn_consultation">Consult</string>
    <string name="text_btn_general">General</string>
    <string name="text_post_time">Time</string>
    <string name="text_primary_post_time">0</string>
    <string name="text_primary_post_hours">H</string>
    <string name="text_btn_increment">+</string>
    <string name="text_btn_decrement">-</string>
    <string name="text_post_photo">Photo</string>
    <string name="text_btn_post">Post</string>
    <string name="text_btn_sign_out">Sign Out</string>
    <string name="text_title_alert_sign_out">Confirm SignOut</string>
    <string name="text_message_alert_sign_out">Are you sure you want to SignOut?</string>
    <string name="text_btn_alert_cancel">Cancel</string>
    <string name="text_message_photo_changed">Photo changed</string>
    <string name="text_message_post_uploaded">Post uploaded</string>
    <string name="text_error_message_no_photo_for_post">Please select photo for post</string>
    <string name="text_error_message_post_duration">Please set the time</string>
    <string name="text_error_message_post_category">Please select category post</string>
    <string name="text_error_message_post_desc">Post description should not be empty</string>
    <string name="text_error_message_post_title">Post title should not be empty</string>
    <string name="text_message_no_post_found">No post found</string>
    <string name="text_btn_accept">Accept</string>
    <string name="text_error_message_time_balance_not_enough">Your time balance it is not enough</string>
    <string name="text_message_accepted_post">Post Accepted</string>
    <string name="text_btn_done">Done</string>
    <string name="text_rank">Rank</string>
    <string name="text_name">Name</string>
    <string name="text_point">Points</string>
    <string name="text_message_help_is_done">Help is done</string>
    <string name="text_message_ask_help_done">Are you sure help is done ?</string>
    <string name="text_btn_yes">Yes</string>
    <string name="text_btn_no">No</string>
</resources>
