<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home"
        android:title="@string/text_nav_home" />

    <item
        android:id="@+id/navListHelp"
        android:icon="@drawable/ic_list_help"
        android:title="@string/text_nav_list_help" />

    <item
        android:id="@+id/navAddPost"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/text_nav_add_post" />

    <item
        android:id="@+id/navLeaderBoard"
        android:icon="@drawable/ic_leader_board"
        android:title="@string/text_nav_leader_board" />

    <item
        android:id="@+id/navMyProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_nav_profile" />

</menu>