<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/padding_standard"
    android:paddingStart="@dimen/padding_standard"
    android:clipToPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_post_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_title_size" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et"
            android:inputType="text"
            android:paddingTop="@dimen/padding_et"
            android:paddingBottom="@dimen/padding_et"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_post_desc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_title_size" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/bg_et"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/padding_et"
            android:paddingBottom="@dimen/padding_et"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_post_category"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCatCourse"
                style="?attr/actionModeCloseButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryBackground"
                android:text="@string/text_btn_course"/>

            <Button
                android:id="@+id/btnCatHobby"
                style="?attr/actionModeCloseButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryBackground"
                android:text="@string/text_btn_hobby"/>

            <Button
                android:id="@+id/btnCatConsult"
                style="?attr/actionModeCloseButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryBackground"
                android:text="@string/text_btn_consultation"/>

            <Button
                android:id="@+id/btnCatGeneral"
                style="?attr/actionModeCloseButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryBackground"
                android:text="@string/text_btn_general"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_post_time"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_standard"
                android:background="@color/colorPrimaryBackground"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_primary_post_time"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_title_qty_size"
                tools:ignore="ButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:padding="@dimen/padding_standard"
                android:background="@color/colorPrimaryBackground"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_primary_post_hours"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_title_qty_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnIncrement"
                android:layout_width="@dimen/btn_qty_size"
                android:layout_height="@dimen/btn_qty_size"
                android:layout_marginStart="@dimen/margin_standard"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_btn_increment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_btn_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDecrement"
                android:layout_width="@dimen/btn_qty_size"
                android:layout_height="@dimen/btn_qty_size"
                android:layout_marginStart="@dimen/margin_standard"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_btn_decrement"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_btn_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_post_photo"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_standard">

            <Button
                android:id="@+id/btnAddPhoto"
                android:layout_width="@dimen/btn_qty_size"
                android:layout_height="@dimen/btn_qty_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_standard"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_btn_increment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_btn_size"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/img_photo_size"
                android:layout_height="@dimen/img_photo_size"
                android:layout_marginStart="@dimen/margin_standard"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"
                app:cardCornerRadius="@dimen/corner_standard"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivPrevPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_no_photo"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btnPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_btn_post"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_btn_size" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>