<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_rank"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/padding_standard"
            android:text="@string/text_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_standard"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_point"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvLeaderBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>