<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryBackgroundWhite"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogoAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_auth_logo_app"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_layout"
        android:background="@drawable/bg_et"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_et"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorDivide"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoAuth"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_layout"
        android:background="@drawable/bg_et"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_et"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorDivide"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:text="@string/text_cb_remember_me"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/btnSignIn" />

    <Button
        android:id="@+id/btnSignIn"
        style="?attr/actionModeCloseButtonStyle"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_btn_sign_in"

        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_to_sign"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_btn_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:text="@string/text_content_sign_in"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_question_size"
        app:layout_constraintBottom_toTopOf="@+id/tvToSignUp"
        app:layout_constraintEnd_toEndOf="@+id/tvToSignUp"
        app:layout_constraintStart_toStartOf="@+id/tvToSignUp" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/height_stroke_size"
        android:layout_marginStart="16dp"
        android:background="@color/colorDivide"
        app:layout_constraintBottom_toBottomOf="@+id/tvText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvText1"
        app:layout_constraintTop_toTopOf="@+id/tvText1" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/height_stroke_size"
        android:layout_marginEnd="16dp"
        android:background="@color/colorDivide"
        app:layout_constraintBottom_toBottomOf="@+id/tvText1"
        app:layout_constraintEnd_toStartOf="@+id/tvText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvText1" />

    <RelativeLayout
        android:id="@+id/rlProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundProgressBar"
        android:translationZ="@dimen/to_front_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>